--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.18 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -6,6 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-white: #fff;
+    --spacing: 0.25rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -158,4 +161,187 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .m-auto {
+    margin: auto;
+  }
+  .flex {
+    display: flex;
+  }
+  .table {
+    display: table;
+  }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
+  .w-80 {
+    width: calc(var(--spacing) * 80);
+  }
+  .w-\[80\%\] {
+    width: 80%;
+  }
+  .w-\[80\] {
+    width: 80;
+  }
+  .w-\[100\%\] {
+    width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .resize {
+    resize: both;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
+  .gap-\[10\] {
+    gap: 10;
+  }
+  .gap-\[20\] {
+    gap: 20;
+  }
+  .gap-\[20px\] {
+    gap: 20px;
+  }
+  .gap-\[40\] {
+    gap: 40;
+  }
+  .rounded-\[20\] {
+    border-radius: 20;
+  }
+  .rounded-\[20px\] {
+    border-radius: 20px;
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .bg-\[\#163A24\] {
+    background-color: #163A24;
+  }
+  .bg-\[\#188b18\] {
+    background-color: #188b18;
+  }
+  .bg-\[\#198C36\] {
+    background-color: #198C36;
+  }
+  .bg-\[g\] {
+    background-color: g;
+  }
+  .bg-\[green\] {
+    background-color: green;
+  }
+  .bg-\[gtee\] {
+    background-color: gtee;
+  }
+  .bg-\[red\] {
+    background-color: red;
+  }
+  .bg-\[rgb\] {
+    background-color: rgb;
+  }
+  .bg-\[u\] {
+    background-color: u;
+  }
+  .bg-\[ur\] {
+    background-color: ur;
+  }
+  .bg-\[url-\] {
+    background-color: url-;
+  }
+  .bg-\[url\] {
+    background-color: url;
+  }
+  .bg-\[url\(\)\] {
+    background-image: url();
+  }
+  .bg-\[url\(\.\)\] {
+    background-image: url(.);
+  }
+  .bg-\[url\(\.\.\/\)\] {
+    background-image: url(../);
+  }
+  .bg-\[url\(\.\/\)\] {
+    background-image: url(./);
+  }
+  .bg-\[url\(\.\/im\)\] {
+    background-image: url(./im);
+  }
+  .bg-\[url\(\.\/imeges\)\] {
+    background-image: url(./imeges);
+  }
+  .bg-\[url\(\.\/imeges\/\)\] {
+    background-image: url(./imeges/);
+  }
+  .bg-\[url\(\.\/imeges\/F\)\] {
+    background-image: url(./imeges/F);
+  }
+  .bg-\[url\(\.\/imeges\/FRa\)\] {
+    background-image: url(./imeges/FRa);
+  }
+  .bg-\[url\(\.\/imeges\/Fra\)\] {
+    background-image: url(./imeges/Fra);
+  }
+  .bg-\[url\(\.\/imeges\/Frame\)\] {
+    background-image: url(./imeges/Frame);
+  }
+  .bg-\[url\(fra\)\] {
+    background-image: url(fra);
+  }
+  .bg-\[url\(frame\)\] {
+    background-image: url(frame);
+  }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
+  .p-\[1\] {
+    padding: 1;
+  }
+  .p-\[10\] {
+    padding: 10;
+  }
+  .p-\[10p\] {
+    padding: 10p;
+  }
+  .p-\[10px\] {
+    padding: 10px;
+  }
+  .text-white {
+    color: var(--color-white);
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-outline-style: solid;
+    }
+  }
+}
