--- a/src/output.css
+++ b/src/output.css
@@ -19,6 +19,7 @@
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-bold: 700;
+    --font-weight-black: 900;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -172,6 +173,27 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .right-\[0px\] {
+    right: 0px;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .left-\[0px\] {
+    left: 0px;
+  }
+  .left-\[100px\] {
+    left: 100px;
+  }
   .m-auto {
     margin: auto;
   }
@@ -208,6 +230,18 @@
   .mb-\[100px\] {
     margin-bottom: 100px;
   }
+  .ml-\[100px\] {
+    margin-left: 100px;
+  }
+  .ml-\[140px\] {
+    margin-left: 140px;
+  }
+  .ml-\[400px\] {
+    margin-left: 400px;
+  }
+  .ml-\[px\] {
+    margin-left: px;
+  }
   .flex {
     display: flex;
   }
@@ -218,8 +252,20 @@
     width: 48px;
     height: 48px;
   }
+  .h-\[0px\] {
+    height: 0px;
+  }
+  .h-\[2\] {
+    height: 2;
+  }
+  .h-\[200\] {
+    height: 200;
+  }
   .h-\[200px\] {
     height: 200px;
+  }
+  .h-\[250px\] {
+    height: 250px;
   }
   .h-\[300px\] {
     height: 300px;
@@ -311,11 +357,17 @@
   .items-center {
     align-items: center;
   }
+  .justify-around {
+    justify-content: space-around;
+  }
   .justify-between {
     justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-evenly {
+    justify-content: space-evenly;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
@@ -329,8 +381,17 @@
   .gap-\[4\] {
     gap: 4;
   }
+  .gap-\[5pc\] {
+    gap: 5pc;
+  }
+  .gap-\[5px\] {
+    gap: 5px;
+  }
   .gap-\[10\] {
     gap: 10;
+  }
+  .gap-\[10px\] {
+    gap: 10px;
   }
   .gap-\[20\] {
     gap: 20;
@@ -352,6 +413,9 @@
   }
   .gap-\[150px\] {
     gap: 150px;
+  }
+  .gap-y-\[10\] {
+    row-gap: 10;
   }
   .gap-y-\[10px\] {
     row-gap: 10px;
@@ -380,6 +444,9 @@
   }
   .bg-\[\#F2EFE6\] {
     background-color: #F2EFE6;
+  }
+  .bg-\[\#FAB5A0\] {
+    background-color: #FAB5A0;
   }
   .bg-\[\#FBFAF7\] {
     background-color: #FBFAF7;
@@ -520,6 +587,9 @@
   .text-\[20px\] {
     font-size: 20px;
   }
+  .text-\[24px\] {
+    font-size: 24px;
+  }
   .text-\[28px\] {
     font-size: 28px;
   }
@@ -552,12 +622,19 @@
     --tw-font-weight: 600px;
     font-weight: 600px;
   }
+  .font-black {
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
   .text-\[\#163A24\] {
     color: #163A24;
+  }
+  .text-\[\#198C36\] {
+    color: #198C36;
   }
   .text-\[red\] {
     color: red;
